Correct navbar spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ a:active {
 }
 
 .Logo {
-  width: 7rem;
-  height: 7rem;
+  width: 6rem;
+  height: 6rem;
+  margin-right: 1rem;
 }
